--- a/.trivyignore
+++ b/.trivyignore
@@ -6,3 +6,5 @@ CVE-2021-3997
 CVE-2023-39017
 # netty vulnerability (remove when patch is added)
 CVE-2023-4586
+# json vulnerability (remove when patch is added)
+CVE-2023-5072
