--- a/.trivyignore
+++ b/.trivyignore
@@ -7,3 +7,5 @@ CVE-2023-3635
 CVE-2023-39017
 # netty vulnerability (remove when patch is added)
 CVE-2023-4586
+# json vulnerability (remove when patch is added)
+CVE-2023-5072
