Skip CVE-2024-21742 vulnerability
The CVE-2024-21742 security vulnerability in apache mime4j core 0.8.6 dependency is used in Axiom API 1.4.0 version. Once the Axiom API is updated with 0.8.10 dependency, the version should be updated in the lang repo and skip this vulnerability.

--- a/.trivyignore
+++ b/.trivyignore
@@ -9,3 +9,5 @@ CVE-2023-4586
 CVE-2020-8908
 CVE-2024-25710
 CVE-2024-26308
+# apache-mime4j-core dependency vulerability (remove once the fixed version for Axiom API is delivered)
+CVE-2024-21742
