--- a/.trivyignore
+++ b/.trivyignore
@@ -9,5 +9,14 @@ CVE-2023-4586
 CVE-2020-8908
 CVE-2024-25710
 CVE-2024-26308
+CVE-2024-29025
 # apache-mime4j-core dependency vulerability (remove once the fixed version for Axiom API is delivered)
 CVE-2024-21742
+# bouncycastle vulnerability (remove when patch is added)
+CVE-2024-29857
+CVE-2024-30171
+CVE-2024-30172
+CVE-2024-29857
+CVE-2024-30171
+CVE-2024-30172
+CVE-2024-34447
