--- a/.trivyignore
+++ b/.trivyignore
@@ -76,3 +76,8 @@ CVE-2020-2773
 CVE-2022-45868
 CVE-2021-28168
 CVE-2024-34447
+
+# bouncycastle vulnerability (remove when patch is added)
+CVE-2024-29857
+CVE-2024-30171
+CVE-2024-30172
